k8s/descriptors/docker-compose/templates/cloudservice-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/pixelgram: "true"
    io.kompose.service: cloudservice
  name: cloudservice
spec:
  containers:
    - image: sannidhi09/pixelgram_cloud_service:latest
      name: cloudservice
      ports:
        - containerPort: 5004
      resources: {}
      tty: true
  restartPolicy: OnFailure
status: {}
