k8s/descriptors/docker-compose/templates/imageservice-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/pixelgram: "true"
    io.kompose.service: imageservice
  name: imageservice
spec:
  containers:
    - image: sannidhi09/pixelgram_image_service:latest
      name: imageservice
      ports:
        - containerPort: 5005
      resources: {}
      tty: true
  restartPolicy: OnFailure
status: {}
