k8s/descriptors/docker-compose/templates/metadataservice-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/pixelgram: "true"
    io.kompose.service: metadataservice
  name: metadataservice
spec:
  containers:
    - image: sannidhi09/pixelgram_metadata_service:latest
      name: metadataservice
      ports:
        - containerPort: 5006
      resources: {}
      tty: true
  restartPolicy: OnFailure
status: {}
