k8s/descriptors/docker-compose/templates/rabbitmq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/pixelgram: "true"
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  containers:
    - image: rabbitmq:3-management-alpine
      livenessProbe:
        exec:
          command:
            - nc
            - -z
            - localhost
            - "5672"
        failureThreshold: 5
        periodSeconds: 10
        timeoutSeconds: 10
      name: rabbitmq
      ports:
        - containerPort: 5672
        - containerPort: 15672
      resources: {}
  hostname: rabbitmq
  restartPolicy: OnFailure
status: {}
