k8s/descriptors/docker-compose/templates/ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/pixelgram: "true"
    io.kompose.service: ui
  name: ui
spec:
  containers:
    - image: sannidhi09/pixelgram_ui_service:latest
      name: ui
      ports:
        - containerPort: 3000
      resources: {}
      tty: true
  restartPolicy: OnFailure
status: {}
