k8s/descriptors/docker-compose/templates/userservice-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/pixelgram: "true"
    io.kompose.service: userservice
  name: userservice
spec:
  containers:
    - image: sannidhi09/pixelgram_user_service:latest
      name: userservice
      ports:
        - containerPort: 5003
      resources: {}
      tty: true
  restartPolicy: OnFailure
status: {}
