k8s/descriptors/docker-compose/templates/metadataservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: metadataservice
  name: metadataservice
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 5006
  selector:
    io.kompose.service: metadataservice
status:
  loadBalancer: {}
