k8s/descriptors/docker-compose/templates/pixelgram-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pixelgram
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pixelgram: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pixelgram: "true"
